Save/Update files [ci skip]

--- a/source/localisation/aow_l_english.yml
+++ b/source/localisation/aow_l_english.yml
@@ -2117,7 +2117,7 @@
  prices.31.d:0 "何世紀もの間、コーヒーはイエメンとエチオピアのみで栽培および輸出されてきた製品であった。イエメンの商人たちは特にコーヒー交易を強く支配しており、国境を越えてコーヒー豆を持ち運ぶ者を阻止するためにあらゆる手段を講じてきた。\nカイコがかつて交易路に沿って西に移動したのと同じように、コーヒーの木もまた、我々の商人の手に渡るようになった。[java_coffee_here.GetName]の大規模農園ではかなりの量のコーヒーが生産され始めており、コーヒー豆がより簡単に入手できるようになった。"
  prices.31.a:0 "[java_coffee_here.GetName]のコーヒーを飲もう！"
  prices.32.t:0 "[mocha.GetCapitalName]の衰退"
- prices.32.d:0 "かつてコーヒーを調達するために我々の港に来た商人たちは、今や他の選択肢を持っており、[mocha.GetCapitalName]はそれ自体重要な港はあるが、もはや世界のコーヒー豆の主要な集積地ではない。"
+ prices.32.d:0 "かつてコーヒーを調達するために我々の港に来た商人たちは、今や他の選択肢を持っており、[mocha.GetCapitalName]はそれ自体が重要な港ではあるものの、もはや世界のコーヒー豆の主要な集積地ではない。"
  prices.32.a:0 "[From.GetAdjective]の商人が彼らの下劣な策謀で窒息することを願うとしよう。"
  JAVA_COFFEE:0 "コーヒーの木の普及"
  prices.33.t:0 "国際的な書籍市場"
