--- a/source/localisation/cradle_of_civilization_l_english.yml
+++ b/source/localisation/cradle_of_civilization_l_english.yml
@@ -86,7 +86,7 @@
  army_professionalism_events.8.a:0 "戦いの再現を許可する。"
  army_professionalism_events.8.b:0 "まもなく、彼らの理論を試すホンモノの戦争が与えられるだろう。"
  army_professionalism_events.9.t:0 "民間の請負"
- army_professionalism_events.9.d:0 "持続的な体制の欠如のために、多くの各国の軍隊は物資から連隊全体まで民間の請負業者の供給に頼っている。通常これらの企業家は前もって金銭を受け取り、これによって軍が必要とするものを短期間で用意している。多くの場合では、これは作戦中に目まぐるしく変化する軍のニーズに対応するのにうまく機能するが、中には制度を悪用するものもいる。\n我々の軍隊が[enemy_country.GetName]の領土に深く侵入するに伴い、兵站将校と地元の企業家との汚職、不当な協力に関する報告が増えている。長期的な効率に目を向けるならばこれらの慣行を根絶するべきだが、汚職と戦うことで短期的にはさらにシステムを混乱させるリスクがある。"
+ army_professionalism_events.9.d:0 "軍事用恒久的建造物が欠けているために、多くの各国の軍隊は物資から連隊全体まであらゆるものを民間の請負業者の供給に頼っている。通常これらの企業家は前もって金銭を受け取り、これによって軍が必要とするものを短期間で用意している。多くの場合では、これは作戦中に目まぐるしく変化する軍のニーズに対応するのにうまく機能するが、中には制度を悪用するものもいる。\n我々の軍隊が[enemy_country.GetName]の領土に深く侵入するに伴い、兵站将校と地元の企業家との汚職、不当な協力に関する報告が増えている。長期的な効率に目を向けるならばこれらの慣行を根絶するべきだが、汚職と戦うことで短期的にはさらにシステムを混乱させるリスクがある。"
  army_professionalism_events.9.a:0 "汚職を根絶せよ！"
  army_professionalism_events.9.b:0 "我々はそれをそのままにしておくべきだろう。"
  army_professionalism_events.10.t:0 "陸軍の役職"
@@ -388,7 +388,7 @@
  muslim_school_events.22.a:0 "面白い。"
  muslim_school_events.22.a.tt:0 "現在、部族連合が学派をハンバルに変更することが可能になります。"
  muslim_school_events.23.t:0 "スーフィーの聖堂"
- muslim_school_events.23.d:0 "有名なスーフィーの墓につながる聖堂を後援する、あるいは提供することは、長い間、ウラマーの主要な論点であった。より伝統的な世代の権力を握っている彼らは、今この慣習を取り締まろうとするために支配者に圧力をかけている。"
+ muslim_school_events.23.d:0 "有名なスーフィーの墓に関する聖堂を庇護したり、提供したりする慣習は、長い間、ウラマーの主要な論点であった。より伝統主義的な世代が権力を握りつつある現在、彼らはこの慣習を取り締まるよう支配者に圧力をかけている。"
  muslim_school_events.23.a:0 "彼らの言う通りにしなければ。"
  muslim_school_events.23.b:0 "いや。古い指導者は偉大な人物だった！"
  EST_VAL_NEO_SUFISM:1 "新スーフィー主義と伝統主義: §Y$VAL$%§!"
@@ -560,7 +560,7 @@
  propagate_religion_events.8.a:0 "我々はこの人物を利用する。彼に我々の宮廷の地位を提供しよう！"
  propagate_religion_events.8.b:0 "我々は海外の問題の状態についてできるだけ多くを学ぼう。"
  propagate_religion_events.9.t:0 "ムスリム首長"
- propagate_religion_events.9.d:0 "[Root.GetAdjective]の内陸地方では、多くの首長が、中央支配からの干渉をほとんど受けずに、自身の小さな領土を支配している。しかし、多くの権力を伝える能力が欠如しているにもかかわらず、いく人かはより大きな野心を持っている。[hinterland_province.GetName]のいくつかの地方の首長は、自身をスルタンと呼称し始め、彼らの人々をイスラムに改宗させることにより正統性を主張しようとしている。"
+ propagate_religion_events.9.d:0 "[Root.GetAdjective]の内陸地方では、多くの首長が、中央支配からの干渉をほとんど受けずに、自身の小さな領土を支配している。しかし、大きな力を発揮する能力が欠如しているにもかかわらず、過大な野心を持つ者もいる。[hinterland_province.GetName]のいくつかの地方の首長は、自身をスルタンと呼称し始め、彼らの人々をイスラムに改宗させることにより正統性を主張しようとしている。"
  propagate_religion_events.9.a:0 "馬鹿げている"
  propagate_religion_events.10.t:0 "イスラムの習合主義"
  propagate_religion_events.10.d:0 "[Root.GetAdjective]の田園地帯でますます一般的になっている光景は、イスラム信仰の神秘的な宣教師であるスーフィーが旅をする姿である。彼らは多くの場合、信仰の兄弟たちだけでなく、イスラムの信条を自分たちの伝統や神話に統合する方法を見出した、地方の人たちによっても暖かく受け入れられている。その結果は、メッカやカイロに適したものではないが、一般的により多くのものをイスラム教に向けている。"
@@ -643,7 +643,7 @@
  tribal_federation_events.8.a:0 "襲撃者を根絶しなければ。"
  tribal_federation_events.8.b:0 "用心棒代を支払おう。"
  tribal_federation_events.9.t:0 "盗まれた[fancy_trade_caravan_origin.GetFancyTradeGood]"
- tribal_federation_events.9.d:0 "[From.GetAdjective]が彼ら自身の氏族を管理することはできないようだ。[fancy_trade_caravan_origin.GetFancyTradeGood_LOW]を運ぶ隊商が[ambush_province.GetName]の部族による待ち伏せ攻撃を受けた。地方の権威は、彼らがこの状況に対処するつもりだと主張しているが、今のところの影響は、我々の地方の交易商の利益の急激な減少である。"
+ tribal_federation_events.9.d:0 "[From.GetAdjective]は自身の氏族を取り締まることができないようだ。[fancy_trade_caravan_origin.GetFancyTradeGood_LOW]を運ぶ隊商が[ambush_province.GetName]の部族による待ち伏せ攻撃を受けた。地元当局はこの事態に対処するつもりだと主張しているが、今のところ、我々の地元交易商の利益が急減しているという影響がある。"
  tribal_federation_events.9.a:0 "無法者め！"
  tribal_federation_events.10.t:0 "[Root.Monarch.GetTitle]家の儀仗兵"
  tribal_federation_events.10.d:0 "連邦内の氏族が彼らの影響力を示すための非公式な方法はたくさんある。王政評議会の地位は、軍隊の指揮や特定の州に課税する権利のように、確かにその一つである。しかし、氏族に授与することができる最も優れた栄誉の一つは、[Root.Monarch.GetTitle]の儀仗兵の地位である。影響力のある氏族は、支配者の個人的な警護の間で代表者を持つことを期待するだろうが、ただ一人の人物のために非常に多くの護衛が必要なだけである。いくつかの点で、これは実際に[Root.Monarch.GetTitle]を保護するという目標とは反対の考え方だ。"
