--- a/source/localisation/generic_events_l_english.yml
+++ b/source/localisation/generic_events_l_english.yml
@@ -719,7 +719,7 @@
  muslim_piety.4.d:1 "ウラマーの大多数がスーフィーへの傾倒を深めてきたのと同じく、スーフィー教団の大多数もシャリーアに従って生きる敬虔な生活の美徳を称賛するようになった。お互いの過激派では容認できない意見があったが、我々は神秘主義と律法主義を何とかうまく両立させた。我々の国は現在、異なる宗教的慣習に対する節度と寛容の成果を享受している。"
  muslim_piety.4.a:1 "神は善良なり"
  muslim_piety.5.t:1 "イブン・アラビーの哲学に関する議論"
- muslim_piety.5.d:1 "イブン・アラビーはアンダルシアの学者であり神秘主義者であり、多くのスーフィ教徒が最高の宗教指導者と考えています。彼の汎神論の「存在一性論」の哲学は、創造のすべてを神の顕現とみなし、単に伝統的なイスラムの儀式からだけでなく、人生のあらゆる面で神の美しさを見るように崇拝者に勧めました。それ以来、彼の哲学とイスラムの学術的解釈との適合性を巡って猛烈な論争が繰り広げられ、なかには彼に不信心者のレッテルを貼る者まで現れた。一方、多くのスーフィ教徒にとって、イブン・アラビーの哲学は彼らの宗教的習慣の基礎原則となりました。今、我々にもどちらの側に立つのか問われている。"
+ muslim_piety.5.d:1 "イブン・アラビーはアンダルシアの学者であり神秘主義者であり、多くのスーフィ教徒が最高の宗教指導者と考えています。彼の汎神論の「存在一性論」の哲学は、創造のすべてを神の顕現とみなし、単に伝統的なイスラムの儀式からだけでなく、人生のあらゆる面で神の美しさを見るように崇拝者に勧めました。それ以来、彼の哲学とイスラムの学術的解釈との適合性を巡って猛烈な論争が繰り広げられ、中には彼に不信心者のレッテルを貼る者まで現れました。一方、多くのスーフィ教徒にとって、イブン・アラビーの哲学は彼らの宗教的習慣の基礎原則となりました。今、我々にもどちらの側に立つのか問われています。"
  muslim_piety.5.a:1 "存在一性論を拒否。"
  muslim_piety.5.b:1 "存在一性論を支持。"
  muslim_piety.6.t:1 "ズィンミーの建築制限"
@@ -735,7 +735,7 @@
  muslim_piety.8.a:1 "この動きを根絶せよ。"
  muslim_piety.8.b:1 "彼らを支援せよ。"
  muslim_piety.9.t:1 "スーフィー慣習に対する議論"
- muslim_piety.9.d:1 "ムスリム学者は、スーフィズムの許容に関する問題に対して統一見解を持っていなかった。一般の人々の間で宗教的帰依が高まったことを高く評価する学者が多い一方で、特定のスーフィー信仰をどのように表現するかについては否定的な意見もあった。ワインや不倫愛に関する詩や歌、そして聖人とみなされる墓での回旋舞踊や崇拝は、時にはウラマーの強硬派からの反発をまねく可能性があった。"
+ muslim_piety.9.d:1 "ムスリム学者は、スーフィズムの許容に関する問題に対して統一見解を持っていなかった。一般の人々の間で宗教的帰依が高まったことを高く評価する学者が多い一方で、特定のスーフィー信者が信仰をどのように表現するかについては否定的な意見もあった。ワインや不倫略奪愛についての詩や歌、そして回旋舞踊や、聖人とみなされる人々の墓への崇拝は、時にはウラマーの強硬派からの反発をまねく可能性があった。"
  muslim_piety.9.a:1 "強硬派を支援する。"
  muslim_piety.9.b:1 "穏健派を支援する。"
  muslim_piety.10.t:1 "税法の浄化"
@@ -1473,7 +1473,7 @@
  EVTOPTA5098:0 "教会を清めよう。"
  EVTOPTB5098:0 "罪人を罰する。"
  EVTNAME5099:0 "商人たちの分裂"
- EVTDESC5099:1 "[Root.GetAdjective]の交易政策に関して、非常に裕福な、すわなち影響力のある複数の商人たちの間で紛争が発生した。ある集団は、重商主義的な姿勢を取ることを支持し、[Root.GetUsableName]内の交易によって生み出された富は主に[Root.GetAdjective]の交易商と生産者の手に渡るよう政府に求めている。もう一方は、この保護主義的な姿勢を時代遅れのものだとして退け、自由貿易に賛成しており、彼らは自由貿易によって世界中で利益を追求することができるようになるだろうと主張している。当然のことながら、双方は、それぞれの相手について、良く言えば非常に不合理、最も悪く言えば見当違いで危険な信念だと見なしている。"
+ EVTDESC5099:1 "[Root.GetAdjective]の交易政策に関して、非常に裕福なために影響力のある複数の商人たちの間で紛争が発生した。ある集団は、重商主義的な姿勢を取ることを支持し、[Root.GetUsableName]内の交易によって生み出された富は主に[Root.GetAdjective]の交易商と生産者の手に渡るよう政府に求めている。もう一方は、この保護主義的な姿勢を時代遅れのものだとして退け、自由貿易に賛成しており、彼らは自由貿易によって世界中で利益を追求することができるようになるだろうと主張している。当然のことながら、双方は、それぞれの相手について、最も良く言えば非常に不合理だと、最も悪く言えば見当違いで危険な信念だと見なしている。"
  EVTOPTA5099:0 "重商主義の派閥を支援する"
  EVTOPTB5099:0 "これは王家の問題ではない"
  EVTOPTC5099:1 "自由交易こそ未来だ。"
@@ -4331,7 +4331,7 @@
  culture_religion_events.10.dc:0 "[Root.other_advisor_culture.GetCultureName]の役人である、[Root.Mil_Advisor.GetName]の高位の公職への昇格は容易には進まず、[Root.Monarch.GetName]に最も近い人々の多くを怒らせた。我が国の最も古い[Root.Culture.GetName]の一族のメンバーである[Root.prominent_noble.GetName]は、[Root.Mil_Advisor.GetHerHis]の地位から[Root.Mil_Advisor.GetName]を解任することを我々の君主に要求するため、接触してきた。"
  culture_religion_events.10.a:0 "領内の[Root.GetNoblesReplacementForOtherGovernments]に耳を傾けるべきだ。"
  culture_religion_events.10.b:0 "非常識だ！"
- culture_religion_events.11.t:0 "[Root.other_advisor_culture.GetCultureName]の人々の間の昇格への支援"
+ culture_religion_events.11.t:0 "[Root.other_advisor_culture.GetCultureName]の人々の間の支持の高まり"
  culture_religion_events.11.da:0 "[Root.other_advisor_culture.GetCultureName]社会の第一人者として、[Root.Adm_Advisor.GetName]は、[Root.Capital.GetCapitalName]において、[Root.Adm_Advisor.GetSheHe]がその一員である評議会をはるかに上回る優れた洞察力と強い影響力を持っている。[Root.Adm_Advisor.GetSheHe]が我々の有利な点をよく利用している事実は、我々の[Root.GovernmentName]とそれを支配する[Root.Culture.GetName]の人々の支持を大きく高めている。"
  culture_religion_events.11.db:0 "[Root.other_advisor_culture.GetCultureName]社会の第一人者として、[Root.Dip_Advisor.GetName]は、[Root.Capital.GetCapitalName]において、[Root.Dip_Advisor.GetSheHe]がその一員である評議会をはるかに上回る優れた洞察力と強い影響力を持っている。[Root.Dip_Advisor.GetSheHe]が我々の有利な点をよく利用している事実は、我々の[Root.GovernmentName]とそれを支配する[Root.Culture.GetName]の人々の支持を大きく高めている。"
  culture_religion_events.11.dc:0 "[Root.other_advisor_culture.GetCultureName]社会の第一人者として、[Root.Mil_Advisor.GetName]は、[Root.Capital.GetCapitalName]において、[Root.Mil_Advisor.GetSheHe]がその一員である評議会をはるかに上回る優れた洞察力と強い影響力を持っている。[Root.Mil_Advisor.GetSheHe]が我々の有利な点をよく利用している事実は、我々の[Root.GovernmentName]とそれを支配する[Root.Culture.GetName]の人々の支持を大きく高めている。"
