--- a/source/localisation/muslim_dlc_l_english.yml
+++ b/source/localisation/muslim_dlc_l_english.yml
@@ -12,7 +12,7 @@
  muslim_dlc.EVTDESC3:1 "$FROMCOUNTRY$の支配者は、ラマダンの終わりを告げる断食明け祭を祝うため、我々の王国の使節を招待した。祭りは3日間祝われ、我々に求められるのは、その年の間に起こった他人との相違や敵意を赦し、忘れることである。"
  muslim_dlc.EVTOPTA3:0 "素晴らしい"
  muslim_dlc.EVTNAME4:0 "ハッジ"
- muslim_dlc.EVTDESC4:0 "ハッジを遂行することができるすべての健常なムスリムは少なくとも一度はそれを行う必要があり、それは宗教的義務であり、イスラムの五柱の一つである。それはメッカへの巡礼であり、すべての巡礼者は、君主と貧乏人の間に違いはなく、すべての巡礼者が神の前で平等であることを示すため、イフラームを着用する。巡礼者は髭を剃ってはならず、爪を切ってはならず、香水をつけてはならず、罵りあるいは口論してはならず、性交渉を持ってはならず、植物を抜きあるいは傷つけてはならず、野生の動物を殺しあるいは傷つけてはならず、顔や頭、手を覆ってはならず、結婚してはならず、足首の上に靴を履いてはならず、武器を持ち運んではならない。$COUNTRY$の支配者であり、健全なムスリムであるため、ハッジを開始し模範を示す時だ。"
+ muslim_dlc.EVTDESC4:0 "ハッジを遂行することができるすべての健常なムスリムは少なくとも一度はそれを行う必要があり、それは宗教的義務であり、イスラムの五柱の一つである。それはメッカへの巡礼であり、すべての巡礼者は、君主と貧乏人の間に違いはなく、すべての巡礼者が神の前で平等であることを示すため、イフラームを着用する。巡礼者は髭を剃ってはならず、爪を切ってはならず、香水をつけてはならず、罵りあるいは口論してはならず、性交渉を持ってはならず、植物を抜きあるいは傷つけてはならず、野生の動物を殺しあるいは傷つけてはならず、顔や頭、手を覆ってはならず、結婚してはならず、足首より上の靴を履いてはならず、武器を持ち運んではならない。$COUNTRY$の支配者であり、健全なムスリムであるため、ハッジを開始し模範を示す時だ。"
  muslim_dlc.EVTOPTA4:0 "メッカが待っている！"
  muslim_dlc.EVTOPTB4:0 "今はだめだ！"
  muslim_dlc.EVTNAME5:0 "ハッジの儀式"
