Save/Update files [ci skip]

--- a/source/localisation/aow_l_english.yml
+++ b/source/localisation/aow_l_english.yml
@@ -734,7 +734,7 @@
  aow_events.40.a:0 "これが単なる二枚舌でないことを期待しよう。"
  aow_events.41.t:0 "[From.GetName]は[From.Religion.GetName]の反乱軍を保護"
  aow_events.41.d:0 "どうやら[From.GetName]の[From.Religion.GetName]は、我々が思っていたよりも、彼らが引き起こす問題について、より厚かましいようだ。彼らの信仰の兄弟姉妹が我々の街頭で暴動を起こしている事実に直面したとき、彼らの反応は、我々が彼らの異端信仰に敬意を持っていないためにもたらされたというものであった。"
- aow_events.41.a:0 "それが彼らが問題を見る方法であれば、彼らが我々の尊敬を保つことはほとんど望めない。"
+ aow_events.41.a:0 "彼らがそうに考えているのであれば、我々が尊敬を保つことなど望むべくもない。"
  aow_events.42.t:0 "[From.GetName]が[From.Religion.GetName]の反乱軍に資金を提供！"
  aow_events.42.d:0 "[From.GetName]を得るため、彼らが広めた異端の責任を引き受けた我々の努力は、裏目に出ているようだ。彼らは国教に対する反抗運動を受け入れたばかりでなく、公然とさらなる暴動を誘発し、異端者たちが自らの主張により自信を持つことへと繋がっている。これらの狂気によって我々の土地に流れたすべてのカトリックの血は、今や彼らの手の中にある。"
  aow_events.42.a:0 "罪の中にとどまっている者たちに、赦免があってはならない。"
@@ -1899,8 +1899,8 @@
  flavor_per.17.t:0 "エスファハーン・ネスフェ＝イ・ジャハーン"
  flavor_per.17.d:0 "エスファハーンの新王宮の建設がようやく終わり、我々はすでに今や世界の偉大な都市の一つとなっている、チャハール・バーグ通りから始まり、最後は大きなメイダン＝イ・ナクシ＝イ・ジャハンまで、我々は現在、我々の帝国のすべての政府機関を一ヶ所に集めている。\nこのエスファハーンのマイダーン自体が、我々の帝国の縮図であり、我々の国全体からの商人の看板で覆われている巨大な広場であり、記念碑的なマスジッド＝イ・シャー・モスク、帝国のバザール、我々の$MONARCHTITLE$のアリ・カプ宮殿によって占められている。都市の再編を完了する過程で、多くの新しい建設技術が必然的に生まれ、職人や建築家の世代はこれまで考えられていた以上に交易を発展させた。"
  flavor_per.17.a:0 "素晴らしい！"
- flavor_jaj.1.t:0 "ハブサのシッディ国家"
- flavor_jaj.1.d:0 "それがどのように起こったかについて、意見は分かれているようであり、ある者は彼らが暗闇の中からやって来たと言い、ある者は贈り物に偽装された箱の中に隠れていたと言う、しかし、どういうわけか我々の沿岸の砦の指揮官は、島の要塞とその支配下の全地域への支配を同時に失ってしまった。襲撃者は、かつてのエチオピアの奴隷であり、この地域の海軍および陸軍では非常に一般的な光景となっている、シッディ族の集団である。\nシッディ族の指導者は、今日我々の宮廷に聖職者を派遣し、彼らが我々の国家への忠実な奉仕と引き換えに、彼らが奪った要塞を支配することを許可するよう求めている。"
+ flavor_jaj.1.t:0 "ハブサンのシッディ国家"
+ flavor_jaj.1.d:0 "その事件の発生の正確な経緯については諸説あるようで、ある者は彼らが暗闇の中からやって来たと言い、ある者は贈り物に偽装された大きな箱の中に隠れていたと言う。しかし、どういうわけか我々の沿岸の砦の指揮官は、島の要塞とその支配下の全地域への支配を同時に失ってしまった。襲撃者はエチオピア出身の元奴隷であり、この地域の海軍や陸軍でごく普通に見られるようになった、シッディ族の集団である。\nシッディ族の指導者は、今日我々の宮廷に使者を派遣し、我が国への忠実な奉仕と引き換えに、彼らが奪った要塞を支配することを許可するよう求めている。"
  flavor_jaj.1.a:0 "結構。"
  flavor_jaj.1.b:0 "これらの反乱軍は処刑されるべきだ！"
  mer_fortification_effort:0 "メーワールの要塞"
