--- a/source/localisation/flavor_events_l_english.yml
+++ b/source/localisation/flavor_events_l_english.yml
@@ -1825,17 +1825,17 @@
  flavor_tur.EVTOPTA3363:0 "反乱軍を鎮圧し、戦争の準備を！"
  flavor_tur.EVTOPTB3363:0 "反乱軍に集中せよ"
  flavor_tur.EVTNAME3366:0 "王室の官僚機構の拡大"
- flavor_tur.EVTDESC3366:0 "スレイマン1世はおそらく、オスマン帝国スルタンの中で最も偉大なスルタンであった。カーヌーニー（立法帝）と呼ばれ、彼は地方のベイの力が強い中央政府によって抑制される必要があることを認識していた、卓越した統治者であった。ゆえに、彼はあらゆる立場にとって不評であった強力な王室の官僚機構を推進するために苦労することになった…"
- flavor_tur.EVTOPTA3366:0 "王室の官僚を拡大する。"
- flavor_tur.EVTOPTB3366:0 "限定的な改革を行う。"
- flavor_tur.EVTOPTC3366:0 "王室の官僚を削減する。"
+ flavor_tur.EVTDESC3366:0 "スレイマン1世は、オスマン帝国の中で最も偉大なスルタンであっただろう。カーヌーニー（立法帝）と呼ばれた彼は、地方のベイの権力が強力な中央政府によって抑制される必要があることを認識していた、卓越した統治者であった。ゆえに、帝室の官僚機構を強化すべく奮闘したが、それはあらゆる陣営に支持されたわけではなかった…"
+ flavor_tur.EVTOPTA3366:0 "帝室の官僚機構を拡大する。"
+ flavor_tur.EVTOPTB3366:0 "改革を限定する。"
+ flavor_tur.EVTOPTC3366:0 "王室の官僚機構を削減する。"
  flavor_tur.EVTNAME3367:0 "偉大な海軍改革"
- flavor_tur.EVTDESC3367:0 "セリム1世は、冷酷者と呼ばれ、鋭い精神を持つ禁欲的な人物であった。大規模なキリスト教徒の海軍、特にヴェネツィアの脅威を見て、彼はオスマン帝国が海軍を大幅に拡大しなければならないことに気付いた。ヴェネツィアの兵器工廠に対抗して、彼はコンスタンティノープルに「帝立金角湾造船所」の建設を命じた。偉大な造船所は1517年に完成した。"
+ flavor_tur.EVTDESC3367:0 "セリム1世は、冷酷者と呼ばれ、鋭い頭脳を持つ禁欲的な人物であった。大規模なキリスト教徒の海軍、特にヴェネツィアの脅威を見て、オスマン帝国が海軍を大拡張しなければならないことを悟った。ヴェネツィアのアルセナーレに対抗して、コンスタンティノープルに「帝立金角湾造船所」の建設を命じた。この大造船所は1517年に完成した。"
  flavor_tur.EVTOPTA3367:0 "帝立金角湾造船所を建設する。"
  flavor_tur.EVTOPTB3367:0 "小規模な造船所を建設する。"
  flavor_tur.EVTOPTC3367:0 "代わりに陸軍の改革を行う。"
  flavor_tur.EVTNAME3368:0 "ジェム・スルタンの反乱"
- flavor_tur.EVTDESC3368:0 "カラマンとコンヤの総督であったジェム・スルタンは、父親の死後、兄であるスルタンのバヤズィト2世に対抗した。しかし、バヤズィトは宮廷でより広範な支持を得ており、ジェムは最終的に敗北した。彼はロードス島へ逃亡し、1494年に死ぬまで聖ヨハネ騎士団に拘束されたままであった。"
+ flavor_tur.EVTDESC3368:0 "カラマンとコンヤの総督であったジェム・スルタンは、父の死後、兄であるスルタンのバヤズィト2世に対抗した。しかし、バヤズィトは宮廷でより広範な支持を得ており、ジェムは最終的に敗北した。彼はロードス島へ逃亡し、1494年に死ぬまで聖ヨハネ騎士団に拘束された。"
  flavor_tur.EVTOPTA3368:0 "ジェムの反乱を鎮圧する。"
  flavor_tur.EVTOPTB3368:0 "和解を求める。"
  flavor_tur.EVTNAME3370:0 "ジェラーリーの蜂起"
@@ -2852,7 +2852,7 @@
  flavor_mug.EVTDESC1:0 "デカンの様々な主君に長年にわたり従事してきたマラーターは、その高原の戦士たちのような非正規兵を完成させた。我々の指導者たちの多くが、貴族の中にうまく統合されていないのとは異なり、彼らは丘陵の要塞を強化し、自らの権力基盤を構築している。"
  flavor_mug.EVTOPTA1:0 "我々はあらゆる分離主義的な勢力を粉砕しなければならない！"
  flavor_mug.EVTNAME2:0 "アクバルの改革"
- flavor_mug.EVTDESC2:0 "皇帝は、近代化して国家を再建するために、徹底的な改革を提案している。これには、経済改革、税制の改善、合理化された官僚制、軍事的再編が含まれる。しかし、そのような計画は高価であり、民衆、官僚、軍隊の間でかなりの怒りを引き起こすだろう。改革を実行するべきだろうか？"
+ flavor_mug.EVTDESC2:0 "皇帝は国家の近代化と再編のために抜本的な改革を提案している。これには、経済改革、税制の改善、官僚制の合理化、軍事の再編が含まれる。しかし、そのような計画には費用がかかり、民衆、官僚、軍部の間でかなりの怒りを引き起こすだろう。改革を実行するべきだろうか？"
  flavor_mug.EVTOPTA2:0 "統治改革を実施する。"
  flavor_mug.EVTOPTB2:0 "外交改革を実施する。"
  flavor_mug.EVTOPTC2:0 "軍事改革を実施する。"
