--- a/source/localisation/winds_of_change_l_english.yml
+++ b/source/localisation/winds_of_change_l_english.yml
@@ -5696,7 +5696,7 @@
  MUG_nepal_title:0 "ネパールへの教導"
  MUG_nepal_desc:0 "旅の僧侶達はネパールに仏の道を見せようと熱心に取り組んだ。ネパールの人々を我が国家に組み込む事によって、彼らの努力を支援せねばならない。"
  MUG_bengal_title:0 "ベンガルの交易中継港"
- MUG_bengal_desc:1 "ガンジス・デルタは何千年にも渡って交易と商業の中心であった。ここでは東の貿易商がインド市民に陶磁器を売り込む一方で、北インド中からの交易品が他の方面へ流通していく。\n\n最近の西洋の貿易商の到来は到来は、どちらかと言うと、この事の活発化をさらに強調し、デルタ中に交易都市を次々と誕生させ始めた。この発展をさらに奨励し、我が監督下でベンガルの主要な交易中継港の成長を促進せねばならない。"
+ MUG_bengal_desc:1 "ガンジス・デルタは何千年にも渡って交易と商業の中心であった。ここでは東方の交易商がインドの一般大衆に商品を売り込む一方で、北インド中からの交易品が他の方面へ流通していく。\n\n最近になって西方の交易商が到来したことで、むしろこの事象はより顕著となり、デルタ中に交易都市を次々と誕生させ始めた。我々はこの発展をさらに奨励し、我が監督下でベンガルの主要な交易中継港の成長を促進せねばならない。"
  MUG_orissa_title:0 "オリッサの征服"
  MUG_orissa_desc:1 "ガルジャートとベンガル湾の間に位置するオリッサの東海岸は、おそらくコロマンデルのさらに南ほど肥えておらず、また豊かではない。地方領主は、ムガールの正義から逃走するベンガルの土地所有者や支配者の保護を彼らの務めとした。\n\nそのような傲慢を許すことはできない、オリッサにおける秩序を回復せねばならない。"
  MUG_andhra_title:0 "ゴールコンダの富"
