--- a/source/localisation/new_missions_l_english.yml
+++ b/source/localisation/new_missions_l_english.yml
@@ -1222,7 +1222,7 @@
  mug_conquer_orissa_title:0 "オリッサの征服"
  mug_conquer_orissa_desc:0 "ガルジャートとベンガル湾の間に位置するオリッサの東海岸は、おそらくコロマンデルのさらに南ほど肥えておらず、また豊かではない。地方領主は、ムガールの正義から逃走するベンガルの土地所有者や支配者の保護を彼らの務めとした。\nそのような傲慢を許すことはできない、オリッサにおける秩序を回復せねばならない。"
  mug_bengal_entrepot_title:0 "ベンガルの交易中継港"
- mug_bengal_entrepot_desc:1 "ガンジス・デルタは何千年にも渡って交易と商業の中心であった。ここでは東の貿易商がインド市民に陶磁器を売り込む一方で、北インド中からの交易品が他の方面へ流通していく。\n最近の西洋の貿易商の到来は到来は、どちらかと言うと、この事の活発化をさらに強調し、デルタ中に交易都市を次々と誕生させ始めた。この発展をさらに奨励し、我が監督下でベンガルの主要な交易中継港の成長を促進せねばならない。"
+ mug_bengal_entrepot_desc:1 "ガンジス・デルタは何千年にも渡って交易と商業の中心であった。ここでは東方の交易商がインドの一般大衆に商品を売り込む一方で、北インド中からの交易品が他の方面へ流通していく。\n最近になって西方の交易商が到来したことで、むしろこの事象はより顕著となり、デルタ中に交易都市を次々と誕生させ始めた。我々はこの発展をさらに奨励し、我が監督下でベンガルの主要な交易中継港の成長を促進せねばならない。"
  mug_lower_burma_campaign_title:0 "下ビルマ攻略"
  mug_lower_burma_campaign_desc:0 "ビルマとアラカンの海岸沿いの港には、海賊の停泊港が散らばっており、ベンガル・デルタの交易に対して盛んに妨害行為を行っていて、また、我が支配下にある土地で正義から逃れようとする者達に安全な避難先を提供している。\n今こそ、これらの反抗的な君主達へ取り組む時だ。"
  mug_subah_of_ayuddhya_title:0 "アユッダヤのスーバ"
